[project]
name = "diffa"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0.0",
    "gradio>=5.0.0",
    "deepspeed>=0.17.0 ; sys_platform == 'linux'",
    "einops>=0.8.0",
    "immutabledict>=4.2.1",
    "langdetect>=1.0.9",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "modelscope>=1.24.1",
    "nltk>=3.8.1",
    "numba>=0.60.0",
    "numpy>=1.26.4",
    "openai>=1.47.0",
    "pandas>=2.2.3",
    "peft>=0.13.2",
    "qa-metrics>=0.2.42",
    "regex>=2024.9.11",
    "requests>=2.32.3",
    "safetensors>=0.4.5",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "six>=1.16.0",
    "soundfile>=0.13.1",
    "tokenizers>=0.21.2",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "tqdm>=4.66.5",
    "transformers==4.49.0",
    "typing-extensions>=4.12.2",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
